# AI_Video_Summarization_and_Quiz_generation

./: .env  .gitignore  License  README.md  angular.json  main.py  package-lock.json  package.json  pyproject.toml  requirement.txt
src/: index.html
src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
src/app/body/dashboard/: dashboard.html  dashboard.ts
src/app/body/home/: home.css  home.html  home.ts
src/app/body/main/quiz/: quiz.css  quiz.html  quiz.ts
src/app/body/main/upload-video/: upload-video.spec.ts  upload-video.ts
src/app/body/main/video-url/: video-url.css  video-url.html  video-url.spec.ts  video-url.ts
src/app/body/signup/: signup.html  signup.ts
src/app/services/: api.ts  auth.service.ts  database.ts
src/environments/: environment.ts
